# SHARAK

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: PLAN.md  README.md  architecture.md  coding_guidelines.md  gateway_design.html  requirements.md  requirements_driver.md  requirements_gateway.md  requirements_index.md
docs/01_requirements_SWE1/: driver.md  gateway.md  index.md
docs/02_architecture_SWE2/: architecture.md  diagram.html  diagrams.md  gateway_design.html
docs/03_detailed_design_SWE3/: README.md
docs/process/: IMPLEMENTATION_NOTES.md  PLAN.md  tracker.md
driver/: README.md
firmware/: adxl345.c  adxl345.h  i2c.h  i2c_sim.c  i2c_sim.h  i2c_stellaris.c  i2c_stellaris.h  lm3s6965.ld  main.c  startup.c  uart.c  uart.h
gateway/: CMakeLists.txt  PLAN.md  README.md
gateway/include/sharak/: decode.hpp
gateway/src/: decode.cpp
gateway/tests/: test_decode.cpp  test_smoke.cpp
protocol/include/sharak/: protocol.h
protocol/src/: protocol.c
scripts/: run_fleet.sh  run_qemu.sh
sim/: fleet_main.c  fleet_node.c  fleet_node.h
tests/: test_adxl345_decode.c  test_adxl345_driver.c  test_crc16.c  test_fleet_node.c  test_framing.c  test_i2c_sim.c  test_multitype.c
